--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
       <artifactId>redisson</artifactId>
       <version>2.8.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.8.3.RELEASE</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>redis-simple</finalName>
